Add handling for non standard paths on Windows (#280)